Memory options fix